<resources>
    <string name="app_name">Plantier</string>
    <string name="profile">Profile</string>
    <string name="bookmark">Bookmark</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="signup">SignUp</string>
    <string name="login">SignIn</string>
    <string name="message_welcome_page">Want easy gardening? Become a member and enjoy the benefits, only at Plantier!</string>
    <string name="title_welcome_page">Welcome to Dicoding!</string>
    <string name="title_signup_page">Complete your data below, OK?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Enter your data first</string>
    <string name="title_login_page">Are you ready to upgrade your skills?</string>
    <string name="name">Name</string>
    <string name="copyright">© 2021 Plantier</string>
    <string name="message_main_page">Happy learning coding.</string>
    <string name="greeting">Welcome! \n%1$s</string>
    <string name="logout">Keluar</string>
    <string name="image_disease">Image of Disease</string>
    <string name="camera_button">Camera Button</string>
    <string name="brand_logo">Brand Logo</string>
    <string name="disease">Disease</string>
    <string name="welcome_greeting">Hallo Planter!</string>
    <string name="signup_text">Don\'t have an account yet? Sign up now!</string>
    <string name="login_text">Already have an account? Let\'s Login!</string>
    <string name="atau">or</string>
    <string name="offer_text">Become a member and enjoy the benefits!</string>
    <string name="fab_camera">Floating Action Button of Camera</string>
    <string name="prevent">Prevent</string>
    <string name="disease_image">Disease Image</string>
    <string name="diseases">Diseases</string>
    <string name="nama_penyakit">Disease Name</string>
    <string name="delete_button">Delete Button</string>
    <string name="lorem_ipsum">lorem ipsum</string>
    <string name="treatment">Treatment</string>
    <string name="prevent1">Control can be by using resistant varieties, such as Srikandi, Lamuru, and Gumarang. In addition, planting can be done simultaneously and carry out a period of time free from corn plants at least two weeks to one month each year. If there are already infected, eradication or total destruction can be carried out. For prevention, metalaxyl fungicides can also be used on plant seeds with a dose of 0.7 grams of active ingredient per kg of seed</string>
    <string name="prevent2">Control can be by using resistant varieties, such as Bima 1, Sukmaraga, and Palakka. If infected plants are seen, they must be eradicated immediately. Can also be given a fungicide with the active ingredients mancozeb and carbendazim.</string>
    <string name="desc1">terjadi ketika timbul bercak-bercak kecil berbentuk bulat sampai oval terdapat pada permukaan daun jagung di bagian atas dan bawah.;varietas tahan, seperti Lamuru, Sukmaraga, dan Semar 10.</string>
    <string name="desc2">terlihat bercak kecil, oval, kebasahan, kemudian bercak memanjang berbentuk elips, menjadi bercak nekrotik (kering) yang luas (hawar), berwarna hijau keabu-abuan atau coklat, dengan panjang hawar 2,5 sampai 15 cm.;"Tanam varietas tahan seperti Kalingga, Arjuna, dan Hibrida Cl.</string>

    <string name="take_photo">take photo</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="preview">Preview</string>
    <string name="ambil_ulang">Retake</string>
    <string name="analysis">Analysis</string>
    <string name="nama_user">Uername</string>
    <string name="bookmark_back">Bookmark Back</string>
    <string name="email_user">Email User</string>
    <string name="setting">Setting</string>
    <string name="theme">Theme</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="bright_mode">Bright Mode</string>
    <string name="button_setting">Button Setting</string>
    <string name="welcome">Welcome!</string>
    <string name="next_button">Next Button</string>
    <string name="corn_benefits">Benefits of Corn</string>
    <string name="lihat_selengkapnya">View more</string>
    <string name="appname">Plantier</string>
    <string name="language">Language</string>
    <string name="change_language">Change Language</string>
    <string name="brand_image">Brand Image</string>
    <string name="preview_background">Preview Background</string>
    <string name="back_button">Back Button</string>
    <string name="gallery_button">Gallery Button</string>
    <string name="upload_button">Upload Button</string>
    <string name="username">Username</string>
    <string name="bookmark_button">Bookmark Button</string>

    <string-array name="benefit">
        <item>Melancarkan pencernaan</item>
        <item>Menyehatkan mata</item>
        <item>Meningkatkan kepadatan tulang</item>
        <item>Mencegah depresi</item>
        <item>Mengendalikan tekanan darah</item>
        <item>Menangkal radikal bebas</item>
        <item>Menjaga kesehatan jantung</item>
        <item>Mencegah kanker paru-paru</item>
        <item>Meningkatkan daya ingat</item>
        <item>Sumber energi</item>
        <item>Kaya antioksidan</item>
    </string-array>

    <string-array name="benefit_photo">
        <item>@drawable/ic_stomach</item>
        <item>@drawable/ic_eye</item>
        <item>@drawable/ic_bone</item>
        <item>@drawable/ic_depression</item>
        <item>@drawable/ic_blood</item>
        <item>@drawable/ic_disease</item>
        <item>@drawable/ic_heart</item>
        <item>@drawable/ic_lungs</item>
        <item>@drawable/ic_brain</item>
        <item>@drawable/ic_energy</item>
        <item>@drawable/ic_molecul</item>
    </string-array>

    <string-array name="benefit_desc">
        <item>Jagung mengandung serat yang bermanfaat melancarkan pencernaan. Serat ini akan dicerna lebih lama dan dapat membuat saluran pencernaan lebih aktif. Karena mengandung serat, jagung dapat dikonsumsi untuk meringankan dan mencegah sembelit.</item>
        <item>Jagung mengandung antioksidan zeaxantin dan lutein. Jenis nutrisi ini dikenal baik untuk menjaga kesehatan mata. Beberapa studi menunjukkan bahwa rutin mengonsumsi jagung dapat mengurangi risiko terjadinya gangguan mata terkait penuaan, seperti degenerasi makula dan katarak.</item>
        <item>Dalam seporsi jagung terdapat kurang lebih 90 mg fosfor. Jumlah ini setara dengan 10% kebutuhan harian fosfor orang dewasa. Fosfor sendiri merupakan nutrisi yang berfungsi meningkatkan kepadatan dan kekuatan tulang serta gigi.</item>
        <item>Jagung mengandung magnesium yang dapat menjaga kesehatan dan fungsi otak, sekaligus menjaga suasana hati. Kadar magnesium yang rendah disebut dapat meningkatkan risiko terkena depresi. Oleh karena itu, konsumsi jagung secara rutin dapat meningkatkan kadar magnesium dalam tubuh untuk mengurangi risiko depresi.</item>
        <item>Kandungan mineral kalium dan magnesium serta antioksidan pada jagung juga baik untuk membantu mengontrol tekanan darah. Oleh sebab itu, mengonsumsi jagung secara rutin dapat memberi manfaat mencegah penyakit darah tinggi. Namun, jagung sebaiknya tidak ditambah garam berlebih, karena berpotensi meningkatkan tekanan darah.</item>
        <item>Jagung mengandung banyak antioksidan dan vitamin C yang baik untuk menjaga tubuh tetap sehat. Antioksidan diketahui baik untuk menangkal efek radikal bebas yang dapat meningkatkan risiko terkena penyakit, serta penuaan dini.</item>
        <item>Jagung rebus mengandung vitamin C, karotenoid, dan bioflavonoid. Kandungan ini sangat baik mengontrol jumlah kolesterol di dalam darah, sehingga masalah kardiovaskuler lebih terkontrol. Vitamin C pada jagung juga dapat membantu menurunkan asam amino di pembuluh darah. Asam amino yang tinggi bisa berisiko menimbulkan masalah pada pembuluh darah, serta masalah terkait jantung.</item>
        <item>Jagung memiliki kandungan cryptoxanthin. Kandungan tersebut baik untuk menjaga perkembangan kanker paru mengganas.</item>
        <item>Manfaat jagung untuk kesehatan lainnya, yakni dapat meningkatkan daya ingat. Manfaat tersebut diperoleh dari  kandungan Thiamine dan vitamin B1. Selain meningkatkan kemampuan ingatan, jagung rebus juga mampu mencegah penyakit alzheimer.</item>
        <item>Jagung dapat dijadikan makanan pokok pengganti nasi. Tanaman ini menjadi sumber karbohidrat yang dapat diubah menjadi energi. Mengonsumsi jagung dapat menambah stamina, serta melancarkan metabolisme.. Ada sekitar 50% kalori yang dibutuhkan oleh tubuh dan bisa didapat dengan mengonsumsi makanan berkarbohidrat seperti jagung.</item>
        <item>Menjadi sumber antioksidan. Jumlah antioksidan dalam jagung dikenal lebih tinggi daripada biji-bijian lain. Selain itu, kandungan lutein yang merupakan salah satu jenis antioksidan dalam jagung, dapat melindungi mata dari kerusakan sel. Ada juga zeaxanthin yang merupakan karotenoid paling umum ditemukan pada tumbuhan, mafaatnya mampu meningkatan kesehatan mata.</item>
    </string-array>

    <string-array name="disease_name">
        <item>Blight</item>
        <item>Common Rust</item>
        <item>Grey Leaf Spot</item>
        <item>Healthy</item>
    </string-array>

    <string-array name="disease_photo">
        <item>@drawable/disease_blight</item>
        <item>@drawable/disease_common_rust</item>
        <item>@drawable/disease_grey_leaf_spot</item>
        <item>@drawable/disease_healthy</item>
    </string-array>

    <string-array name="disease_desc">
        <item>Terlihat bercak kecil, oval, kebasahan, kemudian bercak memanjang berbentuk elips, menjadi bercak nekrotik (kering) yang luas (hawar), berwarna hijau keabu-abuan atau coklat, dengan panjang hawar 2,5 sampai 15 cm.</item>
        <item>Terjadi ketika timbul bercak-bercak kecil berbentuk bulat sampai oval terdapat pada permukaan daun jagung di bagian atas dan bawah.</item>
        <item>Terjadi ketika muncul bercak daun berwarna hijau kekuningan atau cokelat kemerahan</item>
        <item>Daunnya yang sempurna karena memiliki helai, pelepah, dan tangkai daun. Daun jagung punya tekstur yang licin atau berambut, dua tekstur utama dalam daunnya.</item>
    </string-array>

    <string-array name="disease_treat">
        <item>Tanam varietas tahan seperti Kalingga, Arjuna, dan Hibrida Cl. Varietas jagung manis (sweet corn) sangat peka terhadap penyakit ini</item>
        <item>Varietas tahan, seperti Lamuru, Sukmaraga, dan Semar 10. Jika terlihat tanaman yang sudah terinfeksi maka harus segera dieradikasi. Dapat juga dilakukan pemberian fungisida dengan bahan aktif benomil.</item>
        <item>Menggunakan varietas tahan, seperti Bima 1, Sukmaraga, dan Palakka. Jika terlihat tanaman yang sudah terinfeksi maka harus segera dieradikasi. Dapat juga dilakukan pemberian fungisida dengan bahan aktif mancozeb dan carbendazim.</item>
        <item>Pemberian pupuk dan Penyemprotan pestisida yang rutin</item>
    </string-array>
</resources>