<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.analysis.AnalysisActivity">

    <ImageView
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:background="@color/white_green_gray"
        android:contentDescription="@string/preview_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

        <ImageButton
            android:id="@+id/btn_gallery"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:elevation="4dp"
            android:background="@color/green_light"
            android:contentDescription="@string/gallery_button"
            android:src="@drawable/ic_gallery"
            app:cornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@id/preview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_camera"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
            android:id="@+id/btn_camera"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:background="@color/green_light"
            android:contentDescription="@string/camera_button"
            android:elevation="4dp"
            android:src="@drawable/ic_camera"
            app:layout_constraintTop_toBottomOf="@id/preview"
            app:layout_constraintStart_toEndOf="@id/btn_gallery"
            app:layout_constraintEnd_toStartOf="@id/btn_upload"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
            android:id="@+id/btn_upload"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_upload"
            android:elevation="4dp"
            android:background="@color/green_light"
            android:contentDescription="@string/upload_button"
            app:layout_constraintTop_toBottomOf="@id/preview"
            app:layout_constraintStart_toEndOf="@id/btn_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>